--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "cytoscape-cose-bilkent": "^4.0.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
+    "react-cytoscapejs": "^1.1.0",
     "react-dom": "^16.8.6",
     "react-scripts": "^2.1.8",
     "react-tree-graph": "^4.0.0"
