--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-cytoscapejs": "^1.1.0",
     "react-dom": "^16.8.6",
     "react-scripts": "^2.1.8",
-    "react-tree-graph": "^4.0.0"
+    "react-tree-graph": "^4.0.0",
+    "serve": "^11.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
